<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:textAllCaps="false"
    android:background="#FBF8CB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:padding="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/img_descriptioin"
        android:src="@drawable/nicaragua_flag"
        android:cropToPadding="true"
        android:focusable="true"
        android:layout_below="@+id/textView2"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country_prompt"
        android:id="@+id/textView3"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginBottom="15dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView3"
        android:id="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/countryButton2"
                android:id="@+id/button"
                android:textSize="15sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/countryButton1"
                android:id="@+id/button2"
                android:textSize="15sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/countryButton3"
                android:textSize="15sp"
                android:id="@+id/button3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/countryButton4"
                android:textSize="15dp"
                android:id="@+id/button4" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/countryButton5"
                android:textSize="15dp"
                android:id="@+id/button5" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/countryButton6"
                android:textSize="15dp"
                android:id="@+id/button6" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/userOption1"
                android:id="@+id/button7"
                android:textAlignment="center"
                android:textSize="14sp"
                android:clickable="false"
                android:enabled="true"
                style="@style/Base.TextAppearance.AppCompat.Inverse"
                android:background="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/userOption2"
                android:id="@+id/button8"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:background="#F4C225" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
